--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
                 <br>
                 <a href="http://github.com/SagarChudasama-git/BankProgram" target="_blank" style="color: #8AAAE5;">Click here...</a>
               </p>
+            </section>
+          <section class="project" style="border: 1px solid #8AAAE5">
             <h5>2.  Calculator(Python+Tkinter)</h5>
               <p><br>Create a GUI calculator using Python's Tkinter module that performs basic arithmetic operations (addition, subtraction,   multiplication, and division) with an intuitive interface.
                 <br>
                 <a href="https://github.com/SagarChudasama-git/Calculator-By-Sagar-PYTHONwithTKINTER" target="_blank" style="color: #8AAAE5;">Click here...</a>
               </p>
-            </section>
+          </section>
         </div>
     </section>
     <section id="Education">
